tests_bucklescript/__snapshots__/Error_Records_deprecatedFields_re.b4ab61b9.0.snapshot
Error Records › deprecatedFields.re › output
File \"tests_bucklescript/operations/errors/deprecatedFields.re\", line 7, characters 6-21:
7 |       deprecatedField
          ^^^^^^^^^^^^^^^
Warning 22: Field \"deprecatedField\" has been deprecated. Reason: Use something else instead
